# ani-dl

./: .gitignore  Cargo.toml  README.md  disclaimer.md
.github/workflows/: build.yml  manual.yml
src/: anime.rs  data.rs  main.rs
