[package]
name = "ani-dl"
version = "1.5.1"
edition = "2021"
license-file = "LICENSE"
description = "Download and watch animes in VF and VOSTFR (aka french versions)"
repository = "https://github.com/B0SEmc/ani-dl"
readme = "README.md"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1"
inquire = "0.7"
colored = "2.1"
spinners = "4.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
directories = "5.0"
threadpool = "1.8.1"
chrono = "0.4.38"
