[package]
name = "ani-dl"
version = "1.5.9"
edition = "2024"
license-file = "LICENSE"
description = "Download and watch animes in VF and VOSTFR (aka french versions)"
repository = "https://github.com/B0SEmc/ani-dl"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
inquire = "0.9.3"
colored = "3.0.0"
spinners = "4.1"
reqwest = { version = "0.13.2", features = ["blocking"] }
directories = "6.0.0"
threadpool = "1.8"
chrono = "0.4"
indicatif = "0.18.4"
anyhow = "1.0.101"
